[tool.poetry]
name = "tagsplit"
version = "0.1.0"
description = "Split tags into Markdown Frontmatter format"
authors = ["Amit Kotlovski <amit@amitkot.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
